@@ -1,3 +1,6 @@
+* Mon Oct 23 2023 Steven Pritchard <steve@sicura.us> - 0.9.0
+- Advertise EL9 support in metadata
+
 * Wed Oct 11 2023 Steven Pritchard <steve@sicura.us> - 0.8.0
 - [puppetsync] Updates for Puppet 8
   - These updates may include the following:
